
* SOLR-15587: Don't use the UrlScheme singleton on the client-side to determine cluster's scheme,
  only get from ClusterState provider impl (Timothy Potter)

* SOLR-14569: Configuring a shardHandlerFactory on the /select requestHandler results in HTTP 401 when searching on alias
  in secured Solr. (Isabelle Giguere, Jason Gerlowski, Anshum Gupta, Mark Mark Miller)

==================  8.11.1 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

Bug Fixes
---------------------
* SOLR-15635: Don't close hooks twice when SolrRequestInfo is cleared twice; or /export with classic join
  closed fromCore if provided (Mikhail Khludnev, David Smiley)

* SOLR-15795: Fix REPLACENODE to not use source node when choosing a target node for new replicas (Houston Putman)

* SOLR-15804: Admin UI once again can show files in the Core/Collection -> Files screen. Fixed regression from 8.11.0 (Karl Stoney, janhoy)

* SOLR-15768: Set default permissions for the zookeeper endpoints so users won't need to configure custom permissions for these (janhoy)

* SOLR-15774: Avoid weird off-by-one errors with Angular's 'chosen' select box directive for the security and schema-designer screens in Admin UI (Timothy Potter)

* SOLR-13900: Reset index values on authorization rules after deleting by index (Timothy Potter)

* SOLR-15794: Switching a PRS collection from true -> false -> true results in INACTIVE replicas (noble)

* SOLR-15813: Schema designer not handling `update.autoCreateFields` stored as a string (vs. boolean) in the config overlay (Timothy Potter)

* SOLR-15825: Security UI 'hasPermission' check should check if the user has the "all" permission if the requested permission is not defined
  to match how the backend works (Timothy Potter)

* SOLR-15826: ResourceLoader should better respect allowed paths (janhoy)
